@@ -45,6 +45,13 @@
 			<td width="30%"><span class="label label-warning">{{$pmsdebitvoucher->status}}</span></td>
 		</tr>
 
+		<tr>
+			 <td><strong>Narration</strong></td>
+          <td>
+           {{$pmsdebitvoucher->narration}}
+          </td>
+		</tr>
+
 
 	</table>
 
